2007-03-26  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/Makefile.am: Actually take the libtool versioning into account.

2007-03-20  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* doc/gtk-doc.make: Update from gtk-doc 1.7, and fix '*.sgml'
	prerequisite with $(wildcard) to work in absence of any files.
	* doc/Makefile.am (MAINTAINERCLEANFILES): Add 'tmpl/*.sgml' here, it
	used to be handled in the modified gtk-doc.make
	(HTML_IMAGES): Fix images locations by adding missing 'images/'
	* doc/visual_index.xml: Remove extraneous 'html/' from image
	references that were breaking the generated gallery page.
	
2007-03-20  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/rules: Force link creation and do not complain if failed.

2007-03-13  Xan Lopez <xan.lopez@nokia.com> 

	* src/hildon-banner.c:	Use TYPE_HINT_NOTIFICATION instead of
	TYPE_HINT_MESSAGE.

2007-03-09  Xan Lopez <xan.lopez@nokia.com> 

	* src/hildon-helper.c: Remove guard for NULL message in
	_set_insensitive_message. Passing NULL is accepted with the semantics
	of removing any previous message.

2007-03-09  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-helper.c: Fixing a double free in
	_set_insenstive_message. Fixes NB#52928.

2007-03-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-color-pop-example.c:
	* src/hildon-color-button.c:
	* src/hildon-color-button.h: Correcting the color button popup API as
	suggested by Tommi to follow the GtkComboBox popup API. The propery
	name is now 'popup-shown' and the force-function is _popdown. 

2007-03-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* Makefile.am:
	* configure.ac:
	* doc/Makefile.am:
	* po/Makefile.am:
	* po/POTFILES.in:
	* po/en_GB.po: Fixing the 'engineering english' translation and adding
	it back to the build system. Prolly needs some more updates in the
	future when we resync the 'real' translation package names.
