@@ -1,3 +1,14 @@
+2007-03-27  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* src/hildon-helper.c:
+	* src/hildon-helper.h: Adding a hildon_helper_set_thumb_scrollbar
+	function to enable/disable a thumb scrollbar on a GtkScrolledWindow.
+	Note: requires a 'hildon-thumb-scrollbar' style defined in the theme.
+
+	* examples/Makefile.am:
+	* examples/hildon-thumb-scrollbar-example.c: Example that demoes the
+	thumb scrollbar functionality.
+
 2007-03-26  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* src/Makefile.am: Actually take the libtool versioning into account.
